--- a/TeamProject-main/css/style.css
+++ b/TeamProject-main/css/style.css
@@ -39,76 +39,115 @@
   }
   
   #main_header > h1 {
-    padding-top: 10px;
+    padding-top: 20px;
   }
   
   #main_header > h1 img {
-    width: 110px;
-    height: 50px;
+    position: absolute;
+    right: 170px;
+    top: 1px;
+    height: 60px;
   }
   
   #main_header > .btn_toggle {
-    position: absolute;
-    right: 10px; top: 10px;
+    float: left;
+    padding-left: 20px;
+    padding-top: 20px;
+    width: 30px;
+    height: 30px;
     background: none;
     border: none;
   }
-  #main_header > .btn_toggle img {
-    width: 50px; height: 40px;
 
-
+  #main_header .btn_toggle  > img {
+      height: 30px;
   }
-
   
   #main_visual > .slider > img {
     width: 100%;
     display: block;
-
   }
   
   #service {
     background: #fff;
     overflow: hidden;
-    padding-top: 56px;
-    padding-bottom: 56px;
+    padding-top: 20px;
+    padding-bottom:20px;
   }
+  
   #service ul li {
     float: left;
     width: 33.33%;
     text-align: center;
   }
+
   #service ul li > a {
-    /* outline: 1px solid red; */
     display: inline-block;
     height: 47px;
     line-height: 47px;
   }
   
-  #service ul li > h3 {
-    padding: 37px;
+  #service ul li > p {
+    padding: 20px;
   }
   
   #service ul li > a > img {
     vertical-align: middle;
+    width: 80px;
   }
+  #event > img {
+    height: 220px;
+  }
+
+  #event > h2 {
+  text-align: center;
+  padding-top: 5px;
+  padding-bottom: 20px;
+  color: #111184;
+  }
+
+  #benefit ul li {
+      float: left;
+      width: 33.33%;
+      text-align: center;
+    }
   
-  #brand {
+  #benefit ul li > a {
+      display: inline-block;
+      height: 47px;
+      line-height: 47px;
+    }
+    
+  #benefit ul li > a > img {
+    vertical-align: middle;
+
+    width: 150px;
+  } 
+
+  #benefit > h2 {
+    text-align: center;
+    padding-top: 140px;
+    padding-bottom: 20px;
+    color: #111184;
+    }
+
+  #you {
     padding-bottom: 56px;
   }
   
-  #brand > h2 {
-    margin-bottom: 15px;
+  #you > h2 {
+    margin-bottom: 10px;
+    color: #111184;
   }
   
-  #brand > div {
+  #you > div {
     position: relative;
     width: 100%;
     padding-bottom: 56.25%;
-    /* outline: 1px solid red; */
     margin-bottom: 15px;
   }
   
-  #brand > div > iframe {
+  #you > div > iframe {
     position: absolute;
     left: 0; top: 0;
     width: 100%;
@@ -118,7 +157,7 @@
   #main_footer {
     background: #333;
     color: #fff;
-    padding-top: 30px;
+    padding-top: 56px;
     padding-bottom: 56px;
     padding-left: 20px;
     padding-right: 20px;
@@ -127,7 +166,7 @@
   #main_footer .sns img{
     margin-left: 13px;
     margin-right: 13px;
-    width: 60px; height: 40px;
+    width: 50px;
   }
   
   #main_footer .tel {
@@ -136,6 +175,7 @@
     margin-top: 18px;
     margin-bottom: 18px;
   }
+
   #main_footer .tel a {
     color: #fff;
   }
@@ -158,29 +198,27 @@
     width: 300px;
     height: 100%;
     background: #fff;
-    right: 0; top: 0;
+    top: 0;
     z-index: 999;
     box-shadow: 2px 0px 6px rgba(0,0,0, 0.2);
     display: none;
+    float: left;
   }
   
   #gnb > div {
     height: 68px;
-    /* outline: 1px solid red; */
   }
   
   #gnb .btn_close {
     position: absolute;
-    left: 20px; top: 20px;
+    right: 20px; top: 20px;
     width: 32px;
     height: 32px;
-    background: none;
     border: none;  
   }
   
   
   #gnb > ul > li {
-    /* outline: 1px solid #ccc; */
     padding: 10px 20px;
     text-align: left;
     font-weight: 500;
@@ -191,7 +229,6 @@
   /* 배인배너 슬라이더 이미지 영역 */
   .slider {
     width: 100%;
-    height: calc(100vh - 68px);
     padding-top: 161.35%;
     position: relative;
   }
@@ -202,7 +239,6 @@
     left: 0; top: 0;
     opacity: 0;
     transition-duration: 1s;
-    width: 100%; height: 700px;
   }
   
   .slider > img.show {
