--- a/TeamProject-main/css/style2.css
+++ b/TeamProject-main/css/style2.css
@@ -91,6 +91,9 @@
     text-align: left;
     font-weight: 500;
   }
+  #gnb > ul > li:hover {
+    outline: 1px solid blue;
+  }
 
   
   #main_visual > .slider > img {
