--- a/TeamProject-main/css/style3.css
+++ b/TeamProject-main/css/style3.css
@@ -102,7 +102,7 @@
   .map > .mapin {
     position: absolute;
     top: 105px;
-    color: #ccc;
+    color: #fff;
     left: 48%;
     text-align: center;
     box-sizing: border-box;
@@ -110,6 +110,7 @@
   .mt {
     text-align: center;
     padding: 50px;
+
   }
 
   .cs {
@@ -153,8 +154,9 @@
   #main_footer .copy {
     font-size: 12px;
     font-weight: 400;
+    padding: 20px;
   }
   
   #main_footer .info {
-    margin-bottom: 18px;
+    margin-bottom: 15px;
   }
