--- a/TeamProject-main/css/style3.css
+++ b/TeamProject-main/css/style3.css
@@ -95,21 +95,21 @@
   }
 
   .map > h2 {
-    position: inherit;
-    top: 50%; left: 50%;
+
 
   }
   .map > .mapin {
     position: absolute;
-    top: 105px;
+    top: 80px;
     color: #fff;
-    left: 48%;
-    text-align: center;
+
     box-sizing: border-box;
   }
   .mt {
-    text-align: center;
-    padding: 50px;
+    padding-bottom: 50px;
+    padding-top: 50px;
+
+
 
   }
 
@@ -118,9 +118,9 @@
 
 
   }
-
-
-
+  .white {
+    color: #fff;
+  }
 
 
 
@@ -154,9 +154,8 @@
   #main_footer .copy {
     font-size: 12px;
     font-weight: 400;
-    padding: 20px;
   }
   
   #main_footer .info {
-    margin-bottom: 15px;
+    margin-bottom: 18px;
   }
